--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,30 @@ h1, h2 {
   background-color: var(--bs-info);
 }
 
+#quienes_somos .card-group {
+  border-radius: 0;
+}
+
+#quienes_somos .card{
+  border-radius: 0;
+  border: none;
+}
+
+#quienes_somos .card-body {
+  background-color:#000;
+  color: var(--bs-light)
+}
+
+#quienes_somos .card-header {
+  background-color: var(--bs-info);
+  color: var(--bs-light);
+  border-radius: 0;
+}
+
 footer {
   background-color: var(--bs-info);
+}
+
+footer p{
+ font-size: 1.2rem;
 }
