--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,10 +2,18 @@
 body {
   background-color: #000;
   color: var(--bs-light);
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
 }
 
 h1, h2 {
+  font-family: "Oswald", sans-serif;
+  font-weight: bold;
   text-align: center;
+}
+
+h5 {
+  font-weight: bold;
 }
 
 footer {
@@ -18,7 +26,7 @@ footer {
 
 
 .card {
-  width: 16rem;
+  width: 18rem;
 }
 
 .card img {
