--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,9 @@
+:root {
+  --negro: #000;
+}
 
 body {
-  background-color: #000;
+  background-color: var(--negro);
   color: var(--bs-light);
   font-family: "Raleway", sans-serif;
   font-weight: 400;
@@ -19,6 +22,14 @@ h5 {
 a {
   text-decoration: none;
   color: var(--bs-light);
+}
+
+.nav-bg {
+  background-color: var(--negro);
+  -moz-transition: all 0.3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
 }
 
 #carouselExample img {
@@ -42,6 +53,7 @@ a {
 
 .card-body {
   background-color: var(--bs-info);
+  color: var(--bs-light);
 }
 
 #quienes_somos .card-group {
@@ -54,7 +66,7 @@ a {
 }
 
 #quienes_somos .card-body {
-  background-color:#000;
+  background-color: var(--negro);
   color: var(--bs-light)
 }
 
